# mwm

./: Cargo.toml  run.sh  rustfmt.toml
.vim/: coc-settings.json
mwm/: Cargo.toml
mwm/src/: main.rs
mwm_xcb/: Cargo.toml
mwm_xcb/src/: atom.rs  diagnostic.rs  event.rs  events.rs  lib.rs  plugin.rs  xcb_event_systems.rs  xcb_event_type.rs  xcb_request_systems.rs  xconn.rs
mwm_xcb/src/plugin/: xcb_event_systems.rs
