[package]
name = "mwm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.52"
bevy_app = { git = "https://github.com/bevyengine/bevy" }
bevy_ecs = { git = "https://github.com/bevyengine/bevy" }
log = "0.4.14"
mwm_xcb = { path = "../mwm_xcb" }
pretty_env_logger = "0.4.0"
rustc-hash = "1.1.0"
