[package]
name = "mwm_xcb"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.52"
bevy_app = { git = "https://github.com/bevyengine/bevy" }
bevy_ecs = { git = "https://github.com/bevyengine/bevy" }
log = "0.4.14"
rustc-hash = "1.1.0"
xcb = { git = "https://github.com/pr2502/rust-xcb", branch ="mwm_patches", features = ["randr"] }
